force-app/main/default/objects/Ricambi_Caso__c/Ricambi_Caso__c.object-meta.xml
<CustomObject>
    <label>Ricambi Caso</label>
    <nameField>
        <displayFormat>RC-{YYYY}{MM}-{0}</displayFormat>
        <label>Ricambi Caso Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ricambi Casi</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>