force-app/main/default/objects/Ricambi_Caso__c/fields/Prezzo_unitario__c.field-meta.xml
<CustomField>
    <fullName>Prezzo_unitario__c</fullName>
    <label>Prezzo unitario</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>