force-app/main/default/objects/Ricambi_Caso__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Codice Vici</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Ricambi Casi</relationshipLabel>
    <relationshipName>Ricambi_Casi</relationshipName>
    <type>Lookup</type>
</CustomField>