force-app/main/default/objects/Ricambi_Caso__c/fields/Quantita__c.field-meta.xml
<CustomField>
    <fullName>Quantita__c</fullName>
    <label>Quantità</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>