force-app/main/default/objects/Ricambi_Caso__c/fields/Tipo_Riga__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Riga__c</fullName>
    <label>Tipo Riga</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offerta</fullName>
            </value>
            <value>
                <fullName>Ordine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>