force-app/main/default/objects/Ricambi_Caso__c/fields/Totale__c.field-meta.xml
<CustomField>
    <fullName>Totale__c</fullName>
    <formula>Prezzo_unitario__c * Quantita__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Totale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>